--- a/Printer_Config/macros.cfg
+++ b/Printer_Config/macros.cfg
@@ -1,196 +1,162 @@
-###############################
-###### 	macros.cfg     NEED TO CHANGE SOME CODE ######
-###############################
 
-# Conditional G28
-[gcode_macro CG28]
-gcode:
-   STATUS_HOMING
-  {% if printer.toolhead.homed_axes != "xyz" %}
-    G28
-  {% endif %}
+#####################################################################
+#   Macros
+#####################################################################
 
 [gcode_macro G32]
 gcode:
-    BED_MESH_CLEAR
     G28
     QUAD_GANTRY_LEVEL
+    G28
+    ##  Uncomment for for your size printer:
+    #--------------------------------------------------------------------
+
+    
+    ##  Uncomment for 300 build
+    G0 X150 Y150 Z30 F3600
     
 
-
-#################################
-######### HOUR COUNTER ##########
-#################################
-[gcode_macro COUNTER_OFF]
-gcode: 
-    Set_pin pin=hourCounter value=0
-
-[gcode_macro COUNTER_ON]
-gcode: 
-    Set_pin pin=hourCounter value=1
-
-
-##############################
-######### NEVERMORE ##########
-##############################
-[gcode_macro Nevermore_on]
-gcode:
-    Set_pin pin=nevermore value=1
-
-[gcode_macro Nevermore_off]
-gcode:
-    Set_pin pin=nevermore value=0
-
-[gcode_macro PRINT_START]
-gcode:
-    led_on
-    # Parameters
-    {% set BED = params.BED_TEMP|int %}
-    {% set HOTEND = params.EXTRUDER_TEMP|int %}
-    STATUS_HEATING
-    M140 S{BED} ; set final bed temp
-    M104 S{HOTEND}
-    red
-    CG28
-    #Nevermore_on
-    G0 X150 Y150 Z30  
-    M190 S{BED}            
-    PARK
-    STATUS_HEATING
-    M117 Heatsoaking...
-    M106 S255 ;Turn fan on full blast to help circulate the air
-    #Nevermore_on
-    TEMPERATURE_WAIT SENSOR="temperature_sensor chamber" MINIMUM=40    ; Wait for chamber to warm up
-    M107 ;Turn fan off
-    Attach_Probe_Lock
+    #--------------------------------------------------------------------
    
-    {% if not printer.quad_gantry_level.applied %}
-    STATUS_LEVELING
-    M117 Quad Gantry Leveling...
-    QUAD_GANTRY_LEVEL
-    {% endif %}
-    Dock_probe_unlock
-    STATUS_CLEANING
-    CLEAN_NOZZLE
-    Attach_probe_lock
-    STATUS_CALIBRATING_Z
-    M117 Calibrating Z Offset...  
-    CALIBRATE_Z  
-    STATUS_MESHING
-    M117 Calibrating Bed Mesh...
-    BED_MESH_CALIBRATE
-    RESET_EXTRUDER        
-    Dock_Probe_Unlock
-    #CLEAN_NOZZLE
-
-    #PURGE_LINE
-    COUNTER_ON
-    STATUS_PRINTING
-    M117 Printing...
-
-
-[gcode_macro RESET_EXTRUDER]
-gcode:
-    G92 E0 ; reset extruder
 
 [gcode_macro PRINT_END]
+#   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
 gcode:
-    COUNTER_OFF
+    # safe anti-stringing move coords
+    {% set th = printer.toolhead %}
+    {% set x_safe = th.position.x + 20 * (1 if th.axis_maximum.x - th.position.x > 20 else -1) %}
+    {% set y_safe = th.position.y + 20 * (1 if th.axis_maximum.y - th.position.y > 20 else -1) %}
+    {% set z_safe = [th.position.z + 2, th.axis_maximum.z]|min %}
+    
+    SAVE_GCODE_STATE NAME=STATE_PRINT_END
+    
     M400                           ; wait for buffer to clear
     G92 E0                         ; zero the extruder
-    G1 E-10.0 F3600                ; retract filament
-    G91                            ; relative positioning
-    G0 Z1.00 X20.0 Y20.0 F20000    ; move nozzle to remove stringing
-    TURN_OFF_HEATERS
-    M107                           ; turn off fan
-    G1 Z2 F3000                    ; move nozzle up 2mm
-    G90                            ; absolute positioning
-    G0 X125 Y250 F3600             ; park nozzle at rear
-    BED_MESH_CLEAR
-    M84
-    #Nevermore_off
-    M117
-
+    G1 E-5.0 F1800                 ; retract filament
     
-[gcode_macro LED_ON]
-gcode: 
-  white
+    TURN_OFF_HEATERS
+    
+    G90                                      ; absolute positioning
+    G0 X{x_safe} Y{y_safe} Z{z_safe} F20000  ; move nozzle to remove stringing
+    G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  ; park nozzle at rear
+    M107                                     ; turn off fan
+    
+    BED_MESH_CLEAR
+    RESTORE_GCODE_STATE NAME=STATE_PRINT_END
 
-[gcode_macro PURGE_LINE]
-#   A purge line on the left of the bed to prime the extruder
+
+
+
+
+[gcode_macro START_PRINT]
 gcode:
-    G92 E0                         ; zero/reset extruder
-    G1 X2.2 Y20 Z0.3 F18000        ; move to start position
-    G1 E+15 F150              ;    extrude to put the pressure (-20 from purge macro)
+    #BED_MESH_CLEAR
+    {% set BED_TEMP = params.BED_TEMP|default(110)|float %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(255)|float %}
+    G90 ; use absolute coordinates
+    M83 ; extruder relative mode
+    M140 S{BED_TEMP}
+    M190 S{BED_TEMP}
+    M104 S150 ; set temporary nozzle temp to prevent oozing during homing and auto bed leveling
+    G4 S10 ; allow partial nozzle warmup
+    G28
+    QUAD_GANTRY_LEVEL
+    M109 S{EXTRUDER_TEMP}    
+    G1 E-2.5 F4000
+    CLEAN_NOZZLE
+    G28 Z
+    calibrate_z
+    #M190 S{BED_TEMP}
+    #M109 S{EXTRUDER_TEMP}
+    G1 Z50 F480 #240
+    G1 X10 Y10 F3000
+    G1 Z0.28 F240
+    G92 E0
+    G1 Y140 E10 F1500 ; prime the nozzle
+    G1 X2.3 F5000
     G92 E0
 
-    G1 X2.2 Y200 Z0.25 F1500 E10    ; extrude the first line
-    G1 Z2.0 F3000              ; move nozzle up and retract tiny bit
-    G92 E0 
-    
 
 
-   
-# Park bed for heatsoaking
-[gcode_macro PARK]
-default_parameter_FORCE: 0
+
+
+    #G28
+    #G32
+    #calibrate_z
+    #G1 Z50 F240
+    #G1 X10 Y10 F3000
+    #M104 S{first_layer_temperature[initial_extruder]+extruder_temperature_offset[initial_extruder]} ; set final nozzle temp
+    #M190 S[first_layer_bed_temperature] ; wait for bed temp to stabilize
+    #M109 S{first_layer_temperature[initial_extruder]+extruder_temperature_offset[initial_extruder]} ; wait for nozzle temp to stabilize
+    #G1 Z0.28 F240
+    #G92 E0
+    #G1 Y140 E10 F1500 ; prime the nozzle
+    #G1 X2.3 F5000
+    #G92 E0
+
+
+[gcode_macro END_PRINT]
 gcode:
-  {% if printer.idle_timeout.state != "Printing" or FORCE|int == 1 %}
-    CG28                           ; Home if not already homed
-    SAVE_GCODE_STATE NAME=PARK
-    G90                            ; absolute positioning
-    G0 X150 Y150 Z30 F5000        ; Move to position
-    RESTORE_GCODE_STATE NAME=PARK
-  {% else %}
-    { action_respond_info("PARK disabled while printing!") }
-  {% endif %}
-
-# Park front for maintenance / cleaning
-[gcode_macro PARKFRONT]
-gcode:
-  {% if printer.idle_timeout.state != "Printing" %}
-    CG28                           ; Home if not already homed
-    SAVE_GCODE_STATE NAME=PARKFRONT
-    G90                            ; absolute coords
-    G1 Z100 X130 Y10 F5000         ; Move to position
-    RESTORE_GCODE_STATE NAME=PARKFRONT
-  {% else %}
-    { action_respond_info("PARKFRONT disabled while printing!") }
-  {% endif %}
-
-
-  
-[gcode_macro LOAD]
-gcode:
-    SAVE_GCODE_STATE NAME=LOAD
+    # Turn off bed, extruder, and fan
+    M140 S0
+    M104 S0
+    M106 S0
+    # Move nozzle away from print while retracting
     G91
-    G1 E82 F900                              ;Load filament
-   # CLEAN_NOZZLE
-    RESTORE_GCODE_STATE NAME=LOAD
-    SET_IDLE_TIMEOUT TIMEOUT=7200
-
-#[gcode_macro PURGE]
-#gcode:
-  #  G28
-  #  SAVE_GCODE_STATE NAME=PURGE
-    ;M104 S245 ; set extruder final temp
- #   M109 S245  ;wait for extruder final temp
-    #PARKBUCKET
-   # G1 E75 F300
-    #TURN_OFF_HEATERS
-  #  CLEAN_NOZZLE
-  #  G28 Z
-  #  RESTORE_GCODE_STATE NAME=PURGE
+    G1 X-2 Y-2 E-3 F300
+    # Raise nozzle by 10mm
+    G1 Z10 F3000
+    G90
+    # Disable steppers
+    M84
 
 
 
-    
-# enable to SET_KINEMATIC_POSITION for Z hop
-[force_move]
-enable_force_move: True
 
 
-# Park Toolhead Routine
-[gcode_macro Park_Toolhead]
+
+######################################################################
+# Filament Change
+######################################################################
+
+# M600: Filament Change. This macro will pause the printer, move the
+# tool to the change position, and retract the filament 50mm. Adjust
+# the retraction settings for your own extruder. After filament has
+# been changed, the print can be resumed from its previous position
+# with the "RESUME" gcode.
+
+[pause_resume]
+
+[gcode_macro M600]
 gcode:
-   G1 X150 Y150 F18000
+    {% set X = params.X|default(50)|float %}
+    {% set Y = params.Y|default(0)|float %}
+    {% set Z = params.Z|default(10)|float %}
+    SAVE_GCODE_STATE NAME=M600_state
+    PAUSE
+    G91
+    G1 E-.8 F2700
+    G1 Z{Z}
+    G90
+    G1 X{X} Y{Y} F3000
+    G91
+    G1 E-50 F1000
+    RESTORE_GCODE_STATE NAME=M600_state
+
+
+[gcode_macro LOAD_FILAMENT]
+gcode:
+    {% set speed = params.SPEED|default(500) %}
+    G91
+    G1 E50 F{speed}
+    G1 E50 F{speed}
+    G92
+
+
+[gcode_macro UNLOAD_FILAMENT]
+gcode:
+    {% set speed = params.SPEED|default(500) %}
+    G91
+    G1 E-50 F{speed}
+    G1 E-50 F{speed}
+    G92
