--- a/Printer_Config/adxl.cfg
+++ b/Printer_Config/adxl.cfg
@@ -1,7 +1,6 @@
 ########################
 ###### 	adxl.cfg  ######
 ########################
-
 [mcu rpi]
 serial: /tmp/klipper_host_mcu
 
@@ -11,5 +10,11 @@ cs_pin: rpi:None
 [resonance_tester]
 accel_chip: adxl345
 probe_points:
-    150,150,20  # an example
+    150, 150, 20  # an example
 
+
+[input_shaper]
+shaper_freq_x: 57.0
+shaper_type_x: mzv
+shaper_freq_y: 44.7
+shaper_type_y: mzv
