--- a/Printer_Config/macros.cfg
+++ b/Printer_Config/macros.cfg
@@ -8,11 +8,7 @@ gcode:
     G28
     QUAD_GANTRY_LEVEL
     G28
-    ##  Uncomment for for your size printer:
-    #--------------------------------------------------------------------
 
-    
-    ##  Uncomment for 300 build
     G0 X150 Y150 Z30 F3600
     
 
@@ -32,7 +28,7 @@ gcode:
     
     M400                           ; wait for buffer to clear
     G92 E0                         ; zero the extruder
-    G1 E-5.0 F1800                 ; retract filament
+    G1 E-6.0 F3600                ; retract filament
     
     TURN_OFF_HEATERS
     
@@ -40,7 +36,7 @@ gcode:
     G0 X{x_safe} Y{y_safe} Z{z_safe} F20000  ; move nozzle to remove stringing
     G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  ; park nozzle at rear
     M107                                     ; turn off fan
-    
+    M117 Finished!                 ; display message
     BED_MESH_CLEAR
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
 
@@ -69,10 +65,24 @@ gcode:
     #M190 S{BED_TEMP}
     #M109 S{EXTRUDER_TEMP}
     G1 Z50 F480 #240
-    G1 X10 Y10 F3000
+    G1 X8 Y8 F3000
     G1 Z0.28 F240
-    G92 E0
-    G1 Y140 E10 F1500 ; prime the nozzle
+    G1 Y140 E10 F1500                   ;prime the nozzle
+    G1 X8.5 Y140 F3000                  ;move to side a little
+    G1 Y8 Z0.28 E10 F1500               ;draw second line  
+    G92 E0                              ;Reset Extruder
+    G1 Z5.0 F3000                       ;Move Z Axis up
+
+
+    #G1 X5 Y230.0 Z0.24 F1500.0 E20      ;Draw the first 200mm line
+    #G1 X5.5 Y230.0 Z0.24 F5000.0        ;Move to side a little
+    #G1 X5.5 Y30 Z0.24 F1500.0 E20       ;Draw the second line
+    #G92 E0                              ;Reset Extruder
+    #G1 Z5.0 F3000                       ;Move Z Axis up
+
+
+
+
     G1 X2.3 F5000
     G92 E0
 
