--- a/Printer_Config/printer.cfg
+++ b/Printer_Config/printer.cfg
@@ -3,6 +3,9 @@
 [include stealthburner_leds.cfg]
 [include nozzle_scrub.cfg]
 [include macros.cfg]
+[include adxl.cfg]
+[include extruder.cfg]
+[include fans.cfg]
 
 # This file contains pin mappings for the LDO Kit using BigTreeTech Octopus V1 as the main controller.
 # To use this config, the firmware should be compiled for the STM32F446 with a "32KiB bootloader"
@@ -35,23 +38,6 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_0A0034001350565843333620-if00
 restart_method: command
 ##--------------------------------------------------------------------
 
-[mcu rpi]
-serial: /tmp/klipper_host_mcu
-
-[adxl345]
-cs_pin: rpi:None
-
-[resonance_tester]
-accel_chip: adxl345
-probe_points:
-    150, 150, 20  # an example
-
-
-[input_shaper]
-shaper_freq_x: 57.0
-shaper_type_x: mzv
-shaper_freq_y: 44.7
-shaper_type_y: mzv
 
 
 [printer]
@@ -81,8 +67,6 @@ position_min: 0
 ##--------------------------------------------------------------------
 
 
-
-##  Uncomment for 300mm build
 position_endstop: 300
 position_max: 300
 
@@ -115,11 +99,8 @@ position_min: 0
 ##--------------------------------------------------------------------
 
 
-
-##  Uncomment for 300mm build
 position_endstop: 300
 position_max: 300
-
 
 
 ##--------------------------------------------------------------------
@@ -232,56 +213,6 @@ sense_resistor: 0.110
 stealthchop_threshold: 0
 
 
-#####################################################################
-#   Extruder
-#####################################################################
-
-##  Connected to MOTOR_6
-##  Heater - HE0
-##  Thermistor - T0
-[extruder]
-step_pin: PE2
-dir_pin: !PE3
-enable_pin: !PD4
-##  Update value below when you perform extruder calibration
-##  If you ask for 100mm of filament, but in reality it is 98mm:
-##  rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
-##  22.6789511 is a good starting point
-rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
-##  Update Gear Ratio depending on your Extruder Type
-##  Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
-##  Use 80:20 for M4, M3.1
-gear_ratio: 50:17               #BMG Gear Ratio
-microsteps: 32
-full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
-nozzle_diameter: 0.400
-filament_diameter: 1.75
-heater_pin: PA2
-##  Validate the following thermistor type to make sure it is correct
-##  See https://www.klipper3d.org/Config_Reference.html#common-thermistors for additional options
-sensor_type: ATC Semitec 104NT-4-R025H42G
-sensor_pin: PF4
-min_temp: 0
-max_temp: 270
-max_power: 1.0
-min_extrude_temp: 170
-#control = pid
-#pid_kp = 26.213
-#pid_ki = 1.304
-#pid_kd = 131.721
-##  Try to keep pressure_advance below 1.0
-pressure_advance: 0.05
-##  Default is 0.040, leave stock
-#pressure_advance_smooth_time: 0.040
-
-##  E0 on MOTOR6
-##  Make sure to update below for your relevant driver (2208 or 2209)
-[tmc2209 extruder]
-uart_pin: PE1
-interpolate: false
-run_current: 0.5
-sense_resistor: 0.110
-stealthchop_threshold: 0
 
 
 #####################################################################
@@ -323,45 +254,7 @@ sample_retract_dist: 2.0
 samples_tolerance: 0.01
 samples_tolerance_retries: 3
 
-#####################################################################
-#   Fan Control
-#####################################################################
 
-[fan]
-##  Print Cooling Fan - CNC_FAN0
-pin: PA8
-kick_start_time: 0.5
-##  Depending on your fan, you may need to increase this value
-##  if your fan will not start. Can change cycle_time (increase)
-##  if your fan is not able to slow down effectively
-off_below: 0.10
-
-[heater_fan hotend_fan]
-##  Hotend Fan - CNC_FAN1
-pin: PE5
-max_power: 1.0
-kick_start_time: 0.5
-heater: extruder
-heater_temp: 50.0
-##  If you are experiencing back flow, you can reduce fan_speed
-#fan_speed: 1.0
-
-[controller_fan controller_fan]
-##  Controller fan - CNC_FAN2
-pin: PD12
-max_power: .80
-kick_start_time: 0.5
-heater: heater_bed
-
-[heater_fan exhaust_fan]
-##  Exhaust fan - CNC_FAN3
-pin: PD13
-max_power: 1.0
-shutdown_speed: 0.0
-kick_start_time: 5.0
-heater: heater_bed
-heater_temp: 60
-fan_speed: 1.0
 
 #####################################################################
 #   LED Control
