--- a/Printer_Config/addie-macros.cfg
+++ b/Printer_Config/addie-macros.cfg
@@ -43,39 +43,33 @@ gcode:
 
 
 
-
 [gcode_macro START_PRINT]
 gcode:
+    {% set BED_TEMP = params.BED_TEMP|default(110)|float %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(255)|float %}
+    G90 ; use absolute coordinates
+    M83 ; extruder relative mode
+    M140 S{BED_TEMP}
+    M190 S{BED_TEMP}
+    M104 S150 ; set temporary nozzle temp to prevent oozing during homing and auto bed leveling
+    G4 S10 ; allow partial nozzle warmup
     G28
-    G32
+    QUAD_GANTRY_LEVEL
+    M109 S{EXTRUDER_TEMP}    
+    G1 E-2.5 F4000
+   # CLEAN_NOZZLE
+    G28 Z
     calibrate_z
-    G1 Z50 F240
-    G1 X10 Y10 F3000
-    M104 S{first_layer_temperature[initial_extruder]+extruder_temperature_offset[initial_extruder]} ; set final nozzle temp
-    M190 S[first_layer_bed_temperature] ; wait for bed temp to stabilize
-    M109 S{first_layer_temperature[initial_extruder]+extruder_temperature_offset[initial_extruder]} ; wait for nozzle temp to stabilize
+    G1 Z50 F480 #240
+    G1 X8 Y8 F3000
     G1 Z0.28 F240
     G1 Y140 E10 F1500                   ;prime the nozzle
     G1 X8.5 Y140 F3000                  ;move to side a little
     G1 Y8 Z0.28 E10 F1500               ;draw second line  
     G92 E0                              ;Reset Extruder
     G1 Z5.0 F3000                       ;Move Z Axis up
-
-
-[gcode_macro END_PRINT]
-gcode:
-    # Turn off bed, extruder, and fan
-    M140 S0
-    M104 S0
-    M106 S0
-    # Move nozzle away from print while retracting
-    G91
-    G1 X-2 Y-2 E-3 F300
-    # Raise nozzle by 10mm
-    G1 Z10 F3000
-    G90
-    # Disable steppers
-    M84
+    G1 X2.3 F5000
+    G92 E0
 
 
 
