--- a/Printer_Config/macros.cfg
+++ b/Printer_Config/macros.cfg
@@ -44,22 +44,26 @@ gcode:
 
 
 
-[gcode_macro START_PRINT]
+[gcode_macro PRINT_START]
 gcode:
     #BED_MESH_CLEAR
-    {% set BED_TEMP = params.BED_TEMP|default(110)|float %}
-    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(255)|float %}
+    #{% set BED_TEMP = params.BED_TEMP|default(110)|float %}
+    #{% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(180)|float %}
+    {% set bedtemp = params.BED|int %}
+    {% set hotendtemp = params.HOTEND|int %}
+    {% set chambertemp = params.CHAMBER|default(0)|int %}
+    G28
     G90 ; use absolute coordinates
     M83 ; extruder relative mode
-    M140 S{BED_TEMP}
-    M190 S{BED_TEMP}
+    #M140 S{bedtemp}
+    M190 S{bedtemp}
+    TEMPERATURE_WAIT SENSOR="temperature_sensor chamber_temp" MINIMUM={chambertemp}   ; wait for chamber temp
     M104 S150 ; set temporary nozzle temp to prevent oozing during homing and auto bed leveling
-    G4 S10 ; allow partial nozzle warmup
-    G28
+    G4 S10 ; allow partial nozzle warmup    
     QUAD_GANTRY_LEVEL
-    M109 S{EXTRUDER_TEMP}    
-    G1 E-2.5 F4000
-    CLEAN_NOZZLE
+    M109 S{hotendtemp}    
+    G1 E-3.5 F6000
+    #CLEAN_NOZZLE
     G28 Z
     calibrate_z
     #M190 S{BED_TEMP}
