--- a/Printer_Config/macros.cfg
+++ b/Printer_Config/macros.cfg
@@ -1,6 +1,12 @@
 
 #####################################################################
 #   Macros
+
+ADD TO SLICER GCODE:
+
+M104 S0 ; Stops PS/SS from sending temp waits separately
+M140 S0
+PRINT_START BED=[first_layer_bed_temperature] HOTEND={first_layer_temperature[initial_extruder]+extruder_temperature_offset[initial_extruder]} CHAMBER=[chamber_temperature]
 #####################################################################
 
 [gcode_macro G32]
