--- a/Printer_Config/macros.cfg
+++ b/Printer_Config/macros.cfg
@@ -1,18 +1,29 @@
+[include stealthburner_leds.cfg]
+
 
 #####################################################################
 #   Macros
-
-ADD TO SLICER GCODE:
-
-M104 S0 ; Stops PS/SS from sending temp waits separately
-M140 S0
-PRINT_START BED=[first_layer_bed_temperature] HOTEND={first_layer_temperature[initial_extruder]+extruder_temperature_offset[initial_extruder]} CHAMBER=[chamber_temperature]
 #####################################################################
+
+###LED MACROS###
+#    STATUS_READY
+#    STATUS_OFF
+#    STATUS_BUSY
+#    STATUS_HEATING
+#    STATUS_LEVELING
+#    STATUS_HOMING
+#    STATUS_CLEANING
+#    STATUS_MESHING
+#    STATUS_CALIBRATING_Z
+
+
+
 
 [gcode_macro G32]
 gcode:
     G28
     QUAD_GANTRY_LEVEL
+    STATUS_LEVELING
     G28
 
     G0 X150 Y150 Z30 F3600
@@ -37,12 +48,13 @@ gcode:
     G1 E-6.0 F3600                ; retract filament
     
     TURN_OFF_HEATERS
-    
-    G90                                      ; absolute positioning
+                                     ; absolute positioning
     G0 X{x_safe} Y{y_safe} Z{z_safe} F20000  ; move nozzle to remove stringing
     G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  ; park nozzle at rear
+    G91
+    G90 
     M107                                     ; turn off fan
-    M117 Finished!                 ; display message
+    M84                                      ; disable motors
     BED_MESH_CLEAR
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
 
@@ -58,19 +70,23 @@ gcode:
     {% set bedtemp = params.BED|int %}
     {% set hotendtemp = params.HOTEND|int %}
     {% set chambertemp = params.CHAMBER|default(0)|int %}
+    STATUS_HOMING
     G28
     G90 ; use absolute coordinates
     M83 ; extruder relative mode
     #M140 S{bedtemp}
+    STATUS_HEATING
     M190 S{bedtemp}
     TEMPERATURE_WAIT SENSOR="temperature_sensor chamber_temp" MINIMUM={chambertemp}   ; wait for chamber temp
     M104 S150 ; set temporary nozzle temp to prevent oozing during homing and auto bed leveling
-    G4 S10 ; allow partial nozzle warmup    
+    G4 S10 ; allow partial nozzle warmup
+    STATUS_LEVELING
     QUAD_GANTRY_LEVEL
     M109 S{hotendtemp}    
     G1 E-3.5 F6000
-    #CLEAN_NOZZLE
+    CLEAN_NOZZLE
     G28 Z
+    STATUS_CALIBRATING_Z
     calibrate_z
     #M190 S{BED_TEMP}
     #M109 S{EXTRUDER_TEMP}
@@ -82,57 +98,8 @@ gcode:
     G1 Y8 Z0.28 E10 F1500               ;draw second line  
     G92 E0                              ;Reset Extruder
     G1 Z5.0 F3000                       ;Move Z Axis up
-
-
-    #G1 X5 Y230.0 Z0.24 F1500.0 E20      ;Draw the first 200mm line
-    #G1 X5.5 Y230.0 Z0.24 F5000.0        ;Move to side a little
-    #G1 X5.5 Y30 Z0.24 F1500.0 E20       ;Draw the second line
-    #G92 E0                              ;Reset Extruder
-    #G1 Z5.0 F3000                       ;Move Z Axis up
-
-
-
-
-    G1 X2.3 F5000
-    G92 E0
-
-
-
-
-
-    #G28
-    #G32
-    #calibrate_z
-    #G1 Z50 F240
-    #G1 X10 Y10 F3000
-    #M104 S{first_layer_temperature[initial_extruder]+extruder_temperature_offset[initial_extruder]} ; set final nozzle temp
-    #M190 S[first_layer_bed_temperature] ; wait for bed temp to stabilize
-    #M109 S{first_layer_temperature[initial_extruder]+extruder_temperature_offset[initial_extruder]} ; wait for nozzle temp to stabilize
-    #G1 Z0.28 F240
-    #G92 E0
-    #G1 Y140 E10 F1500 ; prime the nozzle
-    #G1 X2.3 F5000
-    #G92 E0
-
-
-[gcode_macro END_PRINT]
-gcode:
-    # Turn off bed, extruder, and fan
-    M140 S0
-    M104 S0
-    M106 S0
-    # Move nozzle away from print while retracting
-    G91
-    G1 X-2 Y-2 E-3 F300
-    # Raise nozzle by 10mm
-    G1 Z10 F3000
-    G90
-    # Disable steppers
-    M84
-
-
-
-
+  #  G1 X2.3 F5000
+  # G92 E0
 
 
 ######################################################################
@@ -180,3 +147,7 @@ gcode:
     G1 E-50 F{speed}
     G1 E-50 F{speed}
     G92
+
+[gcode_macro PARK]
+gcode:
+    G0 X175 Y180 Z30  
