--- a/Printer_Config/printer.cfg
+++ b/Printer_Config/printer.cfg
@@ -6,6 +6,7 @@
 [include adxl.cfg]
 [include extruder.cfg]
 [include fans.cfg]
+[include display.cfg]
 
 # This file contains pin mappings for the LDO Kit using BigTreeTech Octopus V1 as the main controller.
 # To use this config, the firmware should be compiled for the STM32F446 with a "32KiB bootloader"
@@ -37,7 +38,8 @@
 serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_0A0034001350565843333620-if00
 restart_method: command
 ##--------------------------------------------------------------------
-
+# Object Exclude
+[exclude_object]
 
 
 [printer]
@@ -72,7 +74,7 @@ position_max: 300
 
 
 ##--------------------------------------------------------------------
-homing_speed: 25   #Max 100
+homing_speed: 60   #Max 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
@@ -104,7 +106,7 @@ position_max: 300
 
 
 ##--------------------------------------------------------------------
-homing_speed: 25  #Max 100
+homing_speed: 60  #Max 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
@@ -251,8 +253,8 @@ speed: 7
 samples: 5
 samples_result: median
 sample_retract_dist: 2.0
-samples_tolerance: 0.01
-samples_tolerance_retries: 3
+samples_tolerance: 0.1
+samples_tolerance_retries: 5
 
 
 
@@ -327,48 +329,12 @@ points:
 
 
 #--------------------------------------------------------------------
-speed: 100
+speed: 150
 horizontal_move_z: 10
-retries: 5
+retries: 10
 retry_tolerance: 0.0075
 max_adjust: 10
 
-########################################
-# EXP1 / EXP2 (display) pins
-########################################
-
-[board_pins]
-aliases:
-    # EXP1 header
-    EXP1_1=PE8, EXP1_2=PE7,
-    EXP1_3=PE9, EXP1_4=PE10,
-    EXP1_5=PE12, EXP1_6=PE13,    # Slot in the socket on this side
-    EXP1_7=PE14, EXP1_8=PE15,
-    EXP1_9=<GND>, EXP1_10=<5V>,
-
-    # EXP2 header
-    EXP2_1=PA6, EXP2_2=PA5,
-    EXP2_3=PB1, EXP2_4=PA4,
-    EXP2_5=PB2, EXP2_6=PA7,      # Slot in the socket on this side
-    EXP2_7=PC15, EXP2_8=<RST>,
-    EXP2_9=<GND>, EXP2_10=<5V>
-
-#####################################################################
-#   Displays
-#####################################################################
-
-[display]
-#  mini12864 LCD Display
-lcd_type: uc1701
-cs_pin: EXP1_3
-a0_pin: EXP1_4
-rst_pin: EXP1_5
-encoder_pins: ^EXP2_5, ^EXP2_3
-click_pin: ^!EXP1_2
-contrast: 63
-spi_software_miso_pin: EXP2_1
-spi_software_mosi_pin: EXP2_6
-spi_software_sclk_pin: EXP2_2
 
 [neopixel btt_mini12864]
 #  To control Neopixel RGB in mini12864 display
